# chemtools

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
base/: base.cc  base.h  formula.cc  formula.h  stdint_suffix.cc  stdint_suffix.h  table.cc  table.h  table.inc
chemshell/: main.cc  organic_shell.cc  organic_shell.h  root_shell.cc  root_shell.h  shell_context.cc  shell_context.h  simple_shell_context.cc  simple_shell_context.h
dev/: table-gen.py
organic/: benzene.cc  benzene.h  branch.cc  branch.h  chain.cc  chain.h  complex_compound.cc  complex_compound.h  compound.cc  compound.h  ether.cc  ether.h  group.cc  group.h  halogen.cc  halogen.h  hydroxyl.cc  hydroxyl.h  organic.cc  organic.h  phenyl.cc  phenyl.h
utils/: exception.h  functional.h  io.h  map_parser.h  ranged_numeric.h  string_utils.h  var_array.h
